upgrade to jdk17
Former-commit-id: 4307de5d08f1d57163cb96bbca9514be81a73d2b