@@ -87,15 +87,13 @@ public class RuleOperatorProvider {
 
 	public static void registerRuleOperatorScanPackage(Class<?> target) {
 		Set<Class<?>> classes = RuleOperatorScanner.getAppClasses(target.getPackage().getName());
-		for (Class<?> c : classes) {
-			if (((c.getModifiers() & 1024) != 1024) && ((c.getModifiers() & 16) != 16)
-					&& ((c.getModifiers() & 512) != 512) && RuleOperator.class.isAssignableFrom(c)) {
+		for (Class<?> clazz : classes) {
+			if (((clazz.getModifiers() & 1024) != 1024) && ((clazz.getModifiers() & 16) != 16)
+					&& ((clazz.getModifiers() & 512) != 512) && RuleOperator.class.isAssignableFrom(clazz)) {
 				try {
-					RuleOperator ro = (RuleOperator) c.newInstance();
+					RuleOperator ro = (RuleOperator) clazz.getDeclaredConstructor().newInstance();
 					registerRuleOperator(ro);
-				} catch (InstantiationException e) {
-					logger.warn("", e);
-				} catch (IllegalAccessException e) {
+				} catch (Exception e) {
 					logger.warn("", e);
 				}
 			}
